# official-docx-formatter

./: .gitignore  README.md  SKILL.md  pyproject.toml  setup.py
agents/: openai.yaml
docs/: roadmap-advanced-official-document-features.md
docs/superpowers/plans/: 2026-06-21-official-docx-trusted-engine-refactor.md
evals/: evals.json
profiles/: example-organization.json  standard-party-government.json
references/: document_types.json  document_types.md  fonts.md  profiles.md  standards.md
scripts/: classify_document.py  diagnose_docx.py  format_docx.py  normalize_text.py  profile_manager.py
scripts/official_docx_engine/: __init__.py  diagnostics.py  docx_reader.py  format_plan.py  imprint.py  models.py  page_numbers.py  reporting.py  standard_text.py  structure.py  tables.py  toc.py
tests/: test_classify_fixtures.py  test_format_docx_cli.py  test_format_plan.py  test_normalize_text.py  test_release_surface.py  test_structure_detection.py
tests/fixtures/: text_cases.py
tests/fixtures/docx/: public_service_guide_single_paragraph.docx
